[gd_scene load_steps=3 format=3 uid="uid://cn6nx0dd15xf6"]

[ext_resource type="Script" path="res://src/settings_menu.gd" id="1_gxxr8"]
[ext_resource type="SystemFont" uid="uid://be14qyvbd8lox" path="res://assets/fonts/system_font.tres" id="2_fmvha"]

[node name="OptionsMenu" type="PanelContainer"]
script = ExtResource("1_gxxr8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Video" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 40)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Video"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "Video"
vertical_alignment = 1

[node name="WindowMode" type="MarginContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowMode"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 4

[node name="WindowModeLabel" type="Label" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowMode/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "Window Mode"

[node name="WindowModeButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowMode/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "Windowed"

[node name="WindowSize" type="MarginContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowSize"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 4

[node name="WindowSizeLabel" type="Label" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowSize/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "Window Size"

[node name="WindowSizeButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowSize/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "(1280, 720)"

[node name="WindowVsync" type="MarginContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowVsync"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 4

[node name="WindowVsyncLabel" type="Label" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowVsync/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "V-Sync"

[node name="WindowVsyncButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Video/MarginContainer/VBoxContainer/WindowVsync/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fmvha")
text = "Disabled"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_fmvha")
text = "Back"
